# SPDX-FileCopyrightText: 2023 - 2025 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

mmode_sources += files('jumpstart.mmode.S',
                       'trap_handler.mmode.c',
                       'utils.mmode.c')

smode_sources += files('data.smode.S',
                              'jumpstart.smode.S',
                              'jumpstart.vsmode.S',
                              'tablewalk.smode.c',
                              'trap_handler.smode.c',
                              'string.smode.c',
                              'time.smode.c',
                              'utils.smode.c',
                              'uart.smode.c',
                              'heap.smode.c',
                              'lock.smode.c')


umode_sources += files('jumpstart.umode.S',
                       'jumpstart.vumode.S')
