# SPDX-FileCopyrightText: 2023 - 2025 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

mmode_sources += files('jumpstart.mmode.S',
                       'trap_handler.mmode.c',
                       'utils.mmode.c',
                       'uart.mmode.c',
                       'lock.mmode.c',
                       'data.privileged.S',
                       'thread_attributes.mmode.c')

smode_sources += files('jumpstart.smode.S',
                              'jumpstart.vsmode.S',
                              'tablewalk.smode.c',
                              'trap_handler.smode.c',
                              'string.smode.c',
                              'time.smode.c',
                              'utils.smode.c',
                              'uart.smode.c',
                              'heap.smode.c',
                              'heap.smode.S',
                              'lock.smode.c',
                              'thread_attributes.smode.c')

umode_sources += files('jumpstart.umode.S',
                       'jumpstart.vumode.S')
