# SPDX-FileCopyrightText: 2023 - 2024 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

mmode_sources += files(
                          'jump_to_main.mmode.S',
                          'init.mmode.S',
                          'exit.mmode.S'
                          )

subdir('uart')

jumpstart_source_attributes_yaml = files('jumpstart_public_source_attributes.yaml')
