# SPDX-FileCopyrightText: 2023 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

rivos_internal_jumpstart_tests = [
  ['test004', 'HWP AMPM perf diag.'],
  ['test005', '16K data block move from WB to UC (PBMT) region.'],
  ['test007', 'UART test.'],
  ['test008', 'IMSIC test.'],
  ['test010', 'Override default M-mode start address.'],
  ['test015', 'MP IMSIC test.', '-p4'],
  ['test016', 'MP UART test.', '-p4'],
]
